<!-- bottom_sheet_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Add your bottom sheet content here -->
    <ImageView
        android:id="@+id/imageViewCross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/outline_cancel_24"
        android:layout_gravity="start"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/cross_icon" />

    <!-- Add your bottom sheet content here -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/select_payment_type"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rbtn_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="EasyPaisa"
            android:drawableTop="@drawable/easypaisa_new_icon_logo"
            android:drawablePadding="4dp"
            android:textColor="@drawable/rbtn_textcolor_selector" />

        <RadioButton
            android:id="@+id/radioiPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rbtn_selector"
            android:button="@null"
            android:gravity="center"
            android:checked="true"
            android:padding="5dp"
            android:text="@string/jazzcash"
            android:drawableTop="@drawable/jazzcash"
            android:drawablePadding="4dp"
            android:textColor="@drawable/rbtn_textcolor_selector" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/wallet_information"
        android:layout_marginTop="10dp"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:prefixText="+92"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Address TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:text="@string/submit" />

</LinearLayout>
